<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<com.m.k.seetaoism.widgets.MinMatchParentConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="740dp">

    <ImageView
        android:id="@+id/imageView2"
        style="@style/Jiandao.Horizontal_Line"
        android:layout_marginStart="43dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="43dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/auth_password_login_edt_phone_number"
        style="@style/Jiandao.EditInput"
        android:hint="@string/text_phone_number"
        android:text="18610306473"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/imageView3"
        style="@style/Jiandao.Horizontal_Line"
        android:layout_marginStart="43dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="43dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <EditText
        tools:ignore="MissingConstraints"
        android:id="@+id/auth_password_login_edt_password"
        style="@style/Jiandao.EditInput"
        android:hint="@string/text_input_password"
        android:text="123456"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/imageView3" />


    <com.m.k.seetaoism.widgets.CleanEditButton
        android:id="@+id/auth_password_login_btn_phone_number_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_clean"
        app:layout_constraintBottom_toBottomOf="@id/auth_password_login_edt_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_login_edt_phone_number"
        app:layout_constraintTop_toTopOf="@id/auth_password_login_edt_phone_number" />


    <com.m.k.seetaoism.widgets.CleanEditButton
        android:id="@+id/auth_password_login_btn_password_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_clean"
        app:layout_constraintBottom_toBottomOf="@id/auth_password_login_edt_password"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_login_edt_password"
        app:layout_constraintTop_toTopOf="@id/auth_password_login_edt_password" />

    <com.m.k.seetaoism.widgets.TogglePasswordButton
        android:id="@+id/auth_password_login_btn_toggle_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_eyes_close"
        app:layout_constraintBottom_toBottomOf="@id/auth_password_login_edt_password"
        app:layout_constraintEnd_toStartOf="@+id/auth_password_login_btn_password_clean"
        app:layout_constraintTop_toTopOf="@id/auth_password_login_edt_password" />


    <com.m.k.seetaoism.widgets.EditTextButton
        android:id="@+id/auth_password_login_btn_login"
        style="@style/Jiandao.Button_style1"
        android:layout_marginTop="50dp"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_login_edt_password"
        app:layout_constraintStart_toStartOf="@+id/auth_password_login_edt_password"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/auth_password_login_tv_go_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_verify_code_login"
        android:textColor="@color/gray_6"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/auth_password_login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_login_btn_login" />

    <TextView
        android:id="@+id/auth_password_login_tv_go_regiester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register_immediately"
        android:textColor="@color/gray_6"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_login_btn_login"
        app:layout_constraintTop_toTopOf="@+id/auth_password_login_tv_go_code_login" />


    <!-- 下面抽出去-->

    <ImageView
        android:id="@+id/auth_iv_close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_white" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_login_tv_go_code_login"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_wechat_login" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_qq_login" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_sina_login" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_login_by_social_count"
        android:textSize="12dp"
        android:textColor="@color/black_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</com.m.k.seetaoism.widgets.MinMatchParentConstraintLayout>


</ScrollView>